# carrot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: allocator.rs  anim.rs  carrotconx.rs  client.rs  clientmem.rs  config.rs  dbus.rs  doctor.rs  drm.rs  ei.rs  engine.rs  input.rs  install.rs  ipc.rs  main.rs  output.rs  pipewire.rs  portal.rs  protocol.rs  render.rs  sighand.rs  state.rs  surface.rs  tree.rs  xwayland.rs
src/carrotconx/: auth.rs  conn.rs  wire.rs
src/client/: objects.rs
src/config/: default.rs  kdl.rs  lua.rs
src/config/kdl/: anims.rs  binds.rs  deco.rs  misc.rs  rules.rs
src/dbus/: logind.rs  wire.rs
src/drm/: atomic.rs  connector.rs  device.rs  sys.rs  uevent.rs
src/engine/: wheel.rs
src/input/: cursor_theme.rs  evdev.rs  focus.rs  keymap.rs  seat.rs
src/pipewire/: client_node.rs
src/portal/: cast.rs  picker.rs
src/protocol/: data_control.rs  data_device.rs  display.rs  foreign_toplevel.rs  foreign_toplevel_list.rs  idle.rs  image_copy_capture.rs  interfaces.rs  pointer_constraints.rs  primary_selection.rs  screencopy.rs  session_lock.rs  shm.rs  tearing.rs  xdg_activation.rs
src/render/: loader.rs  renderer.rs  shaders.rs  vulkan.rs
src/shell/: layer.rs  xdg.rs
src/surface/: commit.rs  role.rs  subsurface.rs
src/tree/: float.rs  scrolling.rs
tools/gen-shaders/: Cargo.toml
tools/gen-shaders/src/: main.rs
tools/gen-xwire/: Cargo.toml
tools/gen-xwire/src/: main.rs
