[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
rustix = { version = "1.1.4", features = ["net", "fs", "event", "io_uring", "mm", "param", "time"] }
kbvm = "0.1.6"

[dev-dependencies]
# pins the committed shader words to their manifest; pure rust
sha2 = "0.11"

[features]
# compiles tracing probes in (see src/trace.rs); off = zero cost
trace = []

# the task state machine is not unwind safe - a panicking poll aborts
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
