[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
rustix = { version = "1.1.4", features = ["net", "fs", "event", "io_uring", "mm", "param", "pipe", "time", "process"] }
kbvm = "0.1.6"

# config + ipc; all pure rust. v1-fallback stays off forever.
regex-lite = "0.1"
kdl = { version = "6", default-features = false, features = ["span"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# pins the committed shader words to their manifest; pure rust
sha2 = "0.11"

[features]
# compiles tracing probes in (see src/trace.rs); off = zero cost
trace = []

# the task state machine is not unwind safe - a panicking poll aborts
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
