[package]
name = "carrot"
version = "0.1.0"
edition = "2024"

[dependencies]
# origin startup + c-gull libc linked in: zero linked C. experimental-relocate
# self-relocates the static-PIE, so no ld.so while .dynsym survives for
# --export-dynamic (a dlopened lib's libc imports resolve against us).
eyra = { version = "0.22", features = ["experimental-relocate"] }

# no default features: no `loaded`/libloading (pulls dl* nothing defines);
# the entry comes from the icd via dlopen-rs + Entry::from_static_fn
ash = { version = "0.38", default-features = false }
# pure-rust dynamic linker: loads the mesa icd + its closure against taproot
dlopen-rs = "0.8"
rustix = { version = "1.1.4", features = ["net", "fs", "event", "io_uring", "mm", "param", "pipe", "time", "process"] }
kbvm = "0.1.6"

# config + ipc; all pure rust. v1-fallback stays off forever.
kdl = { version = "6", default-features = false, features = ["span"] }
piccolo = "0.3.3"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# pins the committed shader words to their manifest; pure rust
sha2 = "0.11"

[features]
# compiles tracing probes in (see src/trace.rs); off = zero cost
trace = []

# the task state machine is not unwind safe - a panicking poll aborts
[profile.dev]
panic = "abort"

# origin self-relocates the static-PIE before relocations exist; any call left
# un-inlined in that window goes through a still-zero GOT slot and _start
# faults on entry. o3 flattens the window like the release build.
[profile.dev.package.origin]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
panic = "abort"

# eyra's libc routed to taproot - the same libc the dlopened mesa closure gets
[patch.crates-io]
c-scape = { path = "../taproot/c-scape" }
c-gull = { path = "../taproot/c-gull" }
